@@ -1,12 +1,13 @@
 package ca.uqam.repriseexamen.service;
 
 import ca.uqam.repriseexamen.dao.DemandeRepriseExamenRepository;
-import ca.uqam.repriseexamen.dto.LigneDREPersonnelDTO;
 import ca.uqam.repriseexamen.dto.LigneDREDTO;
 import ca.uqam.repriseexamen.dto.LigneDREEnseignantDTO;
 import ca.uqam.repriseexamen.dto.LigneDREEtudiantDTO;
-import ca.uqam.repriseexamen.dto.LigneHistoriqueEtudiantDTO;
-import ca.uqam.repriseexamen.model.*;
+import ca.uqam.repriseexamen.dto.LigneDREPersonnelDTO;
+import ca.uqam.repriseexamen.model.DemandeRepriseExamen;
+import ca.uqam.repriseexamen.model.TypeDecision;
+import ca.uqam.repriseexamen.model.TypeStatut;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -15,20 +16,22 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.junit4.SpringRunner;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
-import static org.assertj.core.api.Assertions.assertThat;
+
 import java.util.Arrays;
 import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
 
 @RunWith(SpringRunner.class)
 @SpringBootTest
 public class DemandeRepriseExamenServiceImplTest {
 
     @Autowired
-    private DemandeRepriseExamenService service;
+    private DemandeRepriseExamenService demandeService;
     @MockBean
-    private DemandeRepriseExamenRepository repository;
+    private DemandeRepriseExamenRepository demandeRepository;
     @Mock
     private LigneDREPersonnelDTO ligneDREPersonnelEnregistree;
     @Mock
@@ -47,73 +50,50 @@ public class DemandeRepriseExamenServiceImplTest {
     private LigneDREEtudiantDTO ligneDREEtudiant1Soumise;
     @Mock
     private LigneDREEtudiantDTO ligneDREEtudiant2Soumise;
-    @Mock
-    private LigneHistoriqueEtudiantDTO ligneHistoriqueEtudiant1Enregistree;
-    @Mock
-    private LigneHistoriqueEtudiantDTO ligneHistoriqueEtudiant1Soumise;
-    @Mock
-    private LigneHistoriqueEtudiantDTO ligneHistoriqueEtudiant2Soumise;
+
     @Mock
     private DemandeRepriseExamen nouvelleDemandeRepriseExamen;
 
     @Before
     public void setUp() {
-        when(ligneDREPersonnelEnregistree.getStatutCourant()).thenReturn(TypeStatut.ENREGISTREE);
-        when(ligneDREPersonnelSoumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneDREPersonnelAcceptee.getStatutCourant()).thenReturn(TypeStatut.ACCEPTEE);
+        when(ligneDREPersonnelEnregistree.getStatut()).thenReturn(TypeStatut.ENREGISTREE);
+        when(ligneDREPersonnelSoumise.getStatut()).thenReturn(TypeStatut.SOUMISE);
+        when(ligneDREPersonnelAcceptee.getStatut()).thenReturn(TypeStatut.ACCEPTEE);
 
-        when(repository.findLigneDREPersonnelDTOBy())
+        when(demandeRepository.findLigneDREPersonnelDTOBy())
                 .thenReturn(Arrays.asList(
                         ligneDREPersonnelEnregistree,
                         ligneDREPersonnelSoumise,
                         ligneDREPersonnelAcceptee));
 
-        when(ligneDREEnseignantEnregistree.getStatutCourant()).thenReturn(TypeStatut.ENREGISTREE);
-        when(ligneDREEnseignantEnregistree.getEnseignantId()).thenReturn(1L);
-        when(ligneDREEnseignantSoumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneDREEnseignantSoumise.getEnseignantId()).thenReturn(2L);
-        when(ligneDREEnseignantAcceptee.getStatutCourant()).thenReturn(TypeStatut.ACCEPTEE);
-        when(ligneDREEnseignantAcceptee.getEnseignantId()).thenReturn(1L);
+        when(ligneDREEnseignantEnregistree.getStatut()).thenReturn(TypeStatut.ENREGISTREE);
+        when(ligneDREEnseignantAcceptee.getStatut()).thenReturn(TypeStatut.ACCEPTEE);
+        when(ligneDREEnseignantAcceptee.getDecision()).thenReturn(TypeDecision.ACCEPTEE_ENSEIGNANT);
+        when(ligneDREEnseignantSoumise.getStatut()).thenReturn(TypeStatut.SOUMISE);
 
-        when(repository.findLigneDREEnseignantDTOBy())
-                .thenReturn(Arrays.asList(
-                        ligneDREEnseignantEnregistree,
-                        ligneDREEnseignantSoumise,
-                        ligneDREEnseignantAcceptee));
 
-        when(ligneDREEtudiant1Enregistree.getStatutCourant()).thenReturn(TypeStatut.ENREGISTREE);
-        when(ligneDREEtudiant1Enregistree.getEtudiantId()).thenReturn(1L);
-        when(ligneDREEtudiant1Soumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneDREEtudiant1Soumise.getEtudiantId()).thenReturn(1L);
-        when(ligneDREEtudiant2Soumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneDREEtudiant2Soumise.getEtudiantId()).thenReturn(2L);
+        when(demandeRepository.findLigneDREEnseignantDTOByCoursGroupeEnseignantId(1L))
+                .thenReturn(Arrays.asList(ligneDREEnseignantEnregistree, ligneDREEnseignantAcceptee));
 
-        when(repository.findLigneDREEtudiantDTOBy())
-                .thenReturn(Arrays.asList(
-                        ligneDREEtudiant1Enregistree,
-                        ligneDREEtudiant1Soumise,
-                        ligneDREEtudiant2Soumise));
+        when(demandeRepository.findLigneDREEnseignantDTOByCoursGroupeEnseignantId(2L))
+                .thenReturn(List.of(ligneDREEnseignantSoumise));
 
-        when(ligneHistoriqueEtudiant1Enregistree.getStatutCourant()).thenReturn(TypeStatut.ENREGISTREE);
-        when(ligneHistoriqueEtudiant1Enregistree.getEtudiantId()).thenReturn(1L);
-        when(ligneHistoriqueEtudiant1Soumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneHistoriqueEtudiant1Soumise.getEtudiantId()).thenReturn(1L);
-        when(ligneHistoriqueEtudiant2Soumise.getStatutCourant()).thenReturn(TypeStatut.SOUMISE);
-        when(ligneHistoriqueEtudiant2Soumise.getEtudiantId()).thenReturn(2L);
+        when(ligneDREEtudiant1Enregistree.getStatut()).thenReturn(TypeStatut.ENREGISTREE);
+        when(ligneDREEtudiant1Soumise.getStatut()).thenReturn(TypeStatut.SOUMISE);
+        when(ligneDREEtudiant2Soumise.getStatut()).thenReturn(TypeStatut.SOUMISE);
 
-        when(repository.findLigneHistoriqueEtudiantDTOBy())
-                .thenReturn(Arrays.asList(
-                        ligneHistoriqueEtudiant1Enregistree,
-                        ligneHistoriqueEtudiant1Soumise,
-                        ligneHistoriqueEtudiant2Soumise
-                ));
+        when(demandeRepository.findLigneDREEtudiantDTOByEtudiantId(1L))
+                .thenReturn(Arrays.asList(ligneDREEtudiant1Enregistree, ligneDREEtudiant1Soumise));
 
-        when(repository.save(any(DemandeRepriseExamen.class))).thenReturn(nouvelleDemandeRepriseExamen);
+        when(demandeRepository.findLigneDREEtudiantDTOByEtudiantId(2L))
+                .thenReturn(List.of(ligneDREEtudiant2Soumise));
+
+        when(demandeRepository.save(any(DemandeRepriseExamen.class))).thenReturn(nouvelleDemandeRepriseExamen);
     }
 
     @Test
     public void devraitRetournerListeDREPersonnelDTODeLongueurDeux() {
-        List<LigneDREDTO> result = service.getAllDemandeRepriseExamenPersonnel();
+        List<LigneDREDTO> result = demandeService.getAllDemandeRepriseExamenPersonnel();
         assertThat(result)
                 .isNotNull()
                 .isNotEmpty()
@@ -122,7 +102,7 @@ public class DemandeRepriseExamenServiceImplTest {
 
     @Test
     public void devraitRetournerListeDREEnseignantDTODeLongueurUne() {
-        List<LigneDREDTO> result = service.getAllDemandeRepriseExamenEnseignant(1L);
+        List<LigneDREDTO> result = demandeService.getAllDemandeRepriseExamenEnseignant(1L);
         assertThat(result)
                 .isNotNull()
                 .isNotEmpty()
@@ -131,7 +111,7 @@ public class DemandeRepriseExamenServiceImplTest {
 
     @Test
     public void devraitRetournerListeDREEnseignantDTOVide() {
-        List<LigneDREDTO> result = service.getAllDemandeRepriseExamenEnseignant(2L);
+        List<LigneDREDTO> result = demandeService.getAllDemandeRepriseExamenEnseignant(2L);
         assertThat(result)
                 .isNotNull()
                 .isEmpty();
@@ -139,7 +119,7 @@ public class DemandeRepriseExamenServiceImplTest {
 
     @Test
     public void devraitRetournerListeDREEtudiantDTODeLongueurDeux() {
-        List<LigneDREDTO> result = service.getAllDemandeRepriseExamenEtudiant(1L);
+        List<LigneDREDTO> result = demandeService.getAllDemandeRepriseExamenEtudiant(1L);
         assertThat(result)
                 .isNotNull()
                 .isNotEmpty()
@@ -148,25 +128,7 @@ public class DemandeRepriseExamenServiceImplTest {
 
     @Test
     public void devraitRetournerListeDREEtudiantDTODeLongueurUne() {
-        List<LigneDREDTO> result = service.getAllDemandeRepriseExamenEtudiant(2L);
-        assertThat(result)
-                .isNotNull()
-                .isNotEmpty()
-                .hasSize(1);
-    }
-
-    @Test
-    public void devraitRetournerListeLigneHistoriqueEtudiantDTODeLongueurDeux() {
-        List<LigneHistoriqueEtudiantDTO> result = service.getHistoriqueEtudiant(1L);
-        assertThat(result)
-                .isNotNull()
-                .isNotEmpty()
-                .hasSize(2);
-    }
-
-    @Test
-    public void devraitRetournerListeLigneHistoriqueEtudiantDTODeLongueurUne() {
-        List<LigneHistoriqueEtudiantDTO> result = service.getHistoriqueEtudiant(2L);
+        List<LigneDREDTO> result = demandeService.getAllDemandeRepriseExamenEtudiant(2L);
         assertThat(result)
                 .isNotNull()
                 .isNotEmpty()
@@ -175,7 +137,7 @@ public class DemandeRepriseExamenServiceImplTest {
 
     @Test
     public void devraitSoumettreNouvelleDRE() {
-        DemandeRepriseExamen demandeCreee = service.soumettreDemandeRepriseExamen(nouvelleDemandeRepriseExamen);
+        DemandeRepriseExamen demandeCreee = demandeService.soumettreDemandeRepriseExamen(nouvelleDemandeRepriseExamen);
         assertThat(demandeCreee)
                 .isNotNull()
                 .isEqualTo(nouvelleDemandeRepriseExamen);
